Fix map bug on Safari

--- a/src/sass/blocks/contact/contact.sass
+++ b/src/sass/blocks/contact/contact.sass
@@ -57,6 +57,7 @@
       margin-left: 0
   &__map
     position: relative
+    z-index: 2
     width: 620px
     height: 620px
     border-radius: 50%
